<resources>
    <string name="app_name">TicketingApp</string>
    <string name="events">Events</string>
    <string name="orders">Orders</string>
    <string name="buy">Buy</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="exit_button">Exit\n</string>
    <string name="descriere_festival">Descriere Festival</string>
    <string name="numeclient">numeClient</string>
    <string name="event_name">Event name:</string>
    <string name="customer_name">Customer name</string>
    <string name="tickettype">ticketType</string>
    <string name="ticket_type">Ticket type</string>
    <string name="numar_tichete">Numar tichete</string>
    <string name="numberoftickets">numberOfTickets</string>
    <string name="ordered">Ordered</string>
    <string name="orderedat">orderedAt</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_maps">Google Maps</string>
</resources>