<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:contentDescription="@string/events">

    <!-- Logo View covering the entire layout -->
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/another_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Guideline for top space -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <!-- Guideline for the first button -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <!-- Button 1 -->

    <!-- Guideline for the second button -->
    <TextView
        android:id="@+id/button1"
        android:layout_width="268dp"
        android:layout_height="26dp"
        android:background="@drawable/rounded"
        android:text="@string/events"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintVertical_bias="0.23" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <!-- Button 2 -->

    <!-- Guideline for the third button -->

    <TextView
        android:id="@+id/button2"
        android:layout_width="268dp"
        android:layout_height="26dp"
        android:background="@drawable/rounded"
        android:text="@string/orders"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/guideline_button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_button1"
        app:layout_constraintVertical_bias="0.500" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <!-- Button 3 -->
    <TextView
        android:id="@+id/button3"
        android:layout_width="268dp"
        android:layout_height="26dp"
        android:background="@drawable/rounded"
        android:text="@string/google_maps"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/guideline_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_button2" />

    <!-- Guideline for the fourth button -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <!-- Button 4 -->
    <TextView
        android:id="@+id/button4"
        android:layout_width="268dp"
        android:layout_height="26dp"
        android:background="@drawable/rounded"
        android:text="@string/sign_out"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/guideline_button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_button3" />

</androidx.constraintlayout.widget.ConstraintLayout>
